[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youcom-citation-rag-starter"
version = "0.1.0"
description = "Grounded answer starter with You.com Search API citations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Raymond Lee" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
you-rag = "youcom_citation_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
